--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "gol",
   "version": "1.0.0",
   "scripts": {
-    "test": "node_modules/.bin/mocha"
+    "test": "node_modules/.bin/mocha",
+    "gol": "node demo/gol.js"
   },
   "dependencies": {
     "cli-color": "^0.3.2",
